cambios con respecto a sonarquebe para mejora del codigo